# routage-meteo

./: README.md  astar_chatgpt.py  courants.py  env_concave.py  env_concave_np.py  env_concave_partielle_angle.py  env_concave_partielle_nombre.py  exec_isochrone_realwind.ipynb  exec_np.ipynb  exec_realwind.ipynb  exec_virtualwind.ipynb  fonctions_utiles.py  fonctions_utiles_np.py  isochrone.py  isochrone_np.py  isochrone_partielle_angle.py  isochrone_partielle_nombre.py  parametres_np.py  polaires_np.py  prof  pyproject.toml  test.ipynb  test_2.ipynb  test_comparaison_gribs.ipynb  test_np.ipynb  vents_grib.py  vents_np.py
core/: enveloppe.py  isochrone.py
data/grib_vent/: 20260304_105640_GFS_P25_06.grb2  20260327_143145_AROME_P025_06.grb2  ecmwf_0_25.2026-02-28T08-44-29Z.grb2  gfs_025_20260306_093631.grb2
data/polaires/: figaro3.csv  vector.csv
grib_vent/: 20260422_070337_GFS_P25_00.grb2  comp_ecmwf_0_25.2025-06-04T11-55-16Z.csv  gfs_0_25.2025-11-29T16-50-54Z.grb2
inputs/: polaires.py  vents.py  vents_grib.py
